tests/baselines/reference/parserComputedPropertyName19.errors.txt
parserComputedPropertyName19.ts(1,11): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName19.ts (1 errors) ====
    var v: { [e]? };
              ~
!!! error TS2304: Cannot find name 'e'.